@@ -1,3 +1,4 @@
+* Add picking location on warehouse
 * Always compute expected quantity in inventory
 * Allow to change the destination of internal shipment's moves
 * Allow to modify internal shipment moves in waiting state
